<?xml version="1.0"?>
<package format="3">
  <name>your_package_name</name>
  <version>0.1.0</version>
  <description>ROS2 package to handle custom flight modes and waypoints from QGroundControl.</description>
  <maintainer email="onur.tuncer@melina-aero.com">Onur Tuncer</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>px4_ros2</build_depend>

  <!-- ROS2 dependencies for runtime -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>px4_ros2</exec_depend>

  <!-- Dependencies for testing (if needed) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Export dependencies -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
